# thesis_mit

./: .env.example  .gitignore  README.md  config.py  create_model.py  download_dataset.py  poetry.toml  pyproject.toml  run_download.sh  run_eval_libri.sh  run_libri.sh  run_libri_azure.sh  run_librispeech.sh  run_speech_recognition_seq2seq.py  run_voxpopuli.sh  run_voxpopuli_azure.sh
bart/: nightrun.sh  pretrain_bart.py  run_pretrain_bart.sh
ctc/: config.py  dataclass_args_ctc.py  nightrun.sh  run_libri_ctc.sh  run_speech_recognition_ctc.py  run_vox_ctc.sh
graphs/: colab_ntb.ipynb  playground.ipynb  total_params_libri.csv  train_params_libri.csv  train_params_vox_dora.csv  wer_libri.csv
notebooks/: playground.ipynb  total_params_libri.csv  total_params_libri_dora.csv  total_params_libri_lora.csv  total_params_vox.csv  total_params_vox_dora.csv  total_params_vox_lora.csv  train_params_libri.csv  train_params_libri_dora.csv  train_params_libri_lora.csv  train_params_vox.csv  train_params_vox_lora.csv  wer_vox.csv
run_files/: run_libri_pretrained_decoder.sh  run_libri_pretrained_encoder.sh  run_voxpopuli_pretrained_encoder.sh
run_scripts/: run_libri_azure_128_256.sh  run_libri_azure_128_512.sh  run_libri_azure_16_256.sh  run_libri_azure_16_512.sh  run_libri_azure_32_256.sh  run_libri_azure_32_512.sh  run_libri_azure_64_256.sh  run_libri_azure_64_512.sh  run_libri_azure_fe_freezed.sh  run_libri_azure_fe_trained.sh  run_libri_scratch.sh  run_vox_100k.sh  run_vox_10k-ft-en.sh  run_vox_10k.sh  run_vox_24k-en.sh  run_vox_azure_128_256.sh  run_vox_azure_128_512.sh  (+13 more)
(+41 files in other folders)
