[tool.poetry]
name = "dp-mit"
version = "0.1.0"
description = ""
authors = ["Matej Hornik <bachini256@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
transformers = "^4.45.2"
datasets = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
