[tool.poetry]
name = "dp-mit"
version = "0.1.0"
description = ""
authors = ["Matej Hornik <bachini256@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
transformers = "4.46.3"
datasets = "^3.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
soundfile = "^0.12.1"
numba = "^0.60.0"
librosa = "^0.10.2.post1"
evaluate = "^0.4.3"
accelerate = "^1.2.1"
jiwer = "^3.0.4"
wandb = "^0.18.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
